XSS Guardrails for AI security established.

--- a/web_srva/src/pages/index.html
+++ b/web_srva/src/pages/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Web Server A</title>
   <link rel="stylesheet" href="css/index.css">
+  <script src="./js/purify.min.js"></script>
 </head>
 <body>
 
